Fix to codify overflow text

--- a/css/global.css
+++ b/css/global.css
@@ -83,6 +83,7 @@ h5 {
 .codify {
 	font-size: 0.8em;
 	font-family: "Droid Sans Mono", monospace;
+	overflow-x: auto;
 }
 
 /*
